@@ -16,7 +16,6 @@
 
 package org.polypheny.db.sql.language;
 
-import java.util.stream.Collectors;
 import org.polypheny.db.algebra.type.AlgDataType;
 import org.polypheny.db.languages.ParserPos;
 import org.polypheny.db.sql.language.SqlWriter.Frame;
@@ -46,7 +45,7 @@ public class SqlArrayLiteral extends SqlLiteral {
         }
         if ( PolyTypeFamily.NUMERIC == component.getPolyType().getFamily() ) {
             AlgDataType finalComponent = component;
-            return PolyList.copyOf( list.stream().map( a -> adjustGeneric( a, finalComponent ) ).collect( Collectors.toList() ) );
+            return PolyList.copyOf( list.stream().map( a -> adjustGeneric( a, finalComponent ) ).toList() );
         }
         return list;
     }
@@ -54,7 +53,7 @@ public class SqlArrayLiteral extends SqlLiteral {
 
     private static PolyValue adjustGeneric( PolyValue value, AlgDataType component ) {
         if ( value.isList() ) {
-            return PolyList.copyOf( value.asList().stream().map( e -> adjustGeneric( e, component ) ).collect( Collectors.toList() ) );
+            return PolyList.copyOf( value.asList().stream().map( e -> adjustGeneric( e, component ) ).toList() );
         }
         return PolyValue.convert( value, component.getPolyType() );
     }
